Fix front-end code smell.

--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
 
-                                    <div style="padding:0px; text-align: center;">
+                                    <div style="padding: 0; text-align: center;">
                                         <i class="icon-download" style="font-size:18px;"></i>
                                         <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate-downstream">0</span>
                                         <span class="lead">Mbps</span>
                                     </div>
-                                    <div style="padding:0px; text-align: center;">
+                                    <div style="padding: 0; text-align: center;">
                                         <i class="icon-upload" style="font-size:18px;"></i>
                                         <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate-upstream">0</span>
                                         <span class="lead">Mbps</span>
@@ -404,7 +404,7 @@
                                     </div><!-- /widget-header -->
                                     <div class="widget-content">
 
-                                        <div style="padding:0px; text-align: center;">
+                                        <div style="padding: 0; text-align: center;">
                                             <i class="icon-download" style="font-size:18px;"></i>
                                             <span class="lead value odometer" style="margin-top:11px;" id="sabspeed-rate-downstream">0</span>
                                             <span class="lead">Mbps</span>
