--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
         <div id="plugins">
             
+            <line-chart-plugin
+                ng-if="maxRam"
+                heading="RAM Memory"
+                module-name="mem"
+                max-value="maxRam"
+                min-value="minRam"
+                refresh-rate="1000">
+            </line-chart-plugin>
+
             <static-data-plugin 
                 heading="Machine Info" 
                 static-data="basicInfo">
@@ -86,5 +95,6 @@
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/angular-app.js" type="text/javascript"></script>
+        <script src="js/smoothie.js" type="text/javascript"></script>
     </body>
 </html>
