--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <!-- Angular Libs -->
         <script src="js/angular.min.js" type="text/javascript"></script>
         <style>
+            body {
+                font-family: "Ubuntu", sans-serif;
+            }
             #plugins {
                 border: 1px;
             }
@@ -69,7 +72,7 @@
         <small>Simple plug-and-play linux stats monitoring dashboard</small>
         
         <div id="plugins">
-
+            
             <section>
                 <hr>
                 <h2>Basic Info</h2>
@@ -80,8 +83,9 @@
                 <hr>
                 <h2>System State</h2>
                 <memory></memory>
-                <processes></processes>
+                <cpu-load></cpu-load>
                 <disk-space></disk-space>
+                <processes></processes>
             </section>
 
             <section>
