the navbar css inline solution is pretty awkward. but it works. the UI structure is solidified. more widgets to come

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Linux Dash</h2>
             <small>Simple linux dashboard</small>
 
-            <side-bar></side-bar>
+            <nav-bar></nav-bar>
         </div>
         
         <!-- Templates -->
