[Upg] add installed and upgradables packages, and last upgrade date

--- a/index.html
+++ b/index.html
@@ -228,6 +228,17 @@
                                         <div id="refresh-whereis" class="btn icon-refresh js-refresh-info"></div>
                                     </div><!-- /widget-header -->
                                     <div class="widget-content">
+                                        <div class="cf big_stats">
+                                            <div class="stat">
+                                                <i class="icon-#">Installed&nbsp;</i> <span class="value odometer" id="soft-installed"></span><br>
+                                            </div><!-- .stat -->
+                                            <div class="stat">
+                                                <i class="icon-#">Upgradables&nbsp;</i> <span class="value odometer" id="softs-upgradables"></span><br>
+                                            </div><!-- .stat -->
+                                            <div class="stat">
+                                                <i class="icon-#">Last upgrade&nbsp;</i> <span class="lead" id="last-upgrade"></span><br>
+                                            </div><!-- .stat -->
+                                        </div>
                                         <table id="whereis_dashboard" class="table table-hover table-condensed table-bordered"></table>
                                     </div><!-- /widget-content -->
                                 </div><!-- /widget -->
