--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="/css/raleway-font.css">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/raleway-font.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
 
         <!-- Angular Libs -->
         <script src="js/angular.min.js" type="text/javascript"></script>
