file structure changed. also edited more module names to be human readable rather than Linux commands. What was I thinking?

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
 
-        <!-- Templates -->
+        <!-- Templates Get Rendered Here -->
         <div id="plugins" ng-view></div>
 
         <!-- Javascript-->
