--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/app.js" type="text/javascript"></script>
+        <script src="js/linuxDash.js" type="text/javascript"></script>
         <script src="js/widgets.js" type="text/javascript"></script>
         <script src="js/smoothie.min.js" type="text/javascript"></script>
     </body>
