uses CSS caption for display:table, removing margin-top (ugly when not used)

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                                     <div id="refresh-cpu" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
-                                    <div style="text-align:center;">
-                                        <b>Number of cores:</b> <span class="lead" id="core-number">0</span>
-                                    </div>
                                     <div class="cf big_stats">
+					<div class="caption">
+						Number of cores: <span class="lead" id="core-number">0</span>
+					</div><!-- .caption -->
                                         <div class="stat">
                                             <i class="icon-#">1 min&nbsp;</i> <span class="value odometer" id="cpu-1min-per"></span> %<br>
                                             <span class="value" id="cpu-1min"></span>
