Added lodash, just in case array-based operations become common. updated ip module

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
         <!-- Angular Libs -->
+        <script src="js/lodash.compat.min.js" type="text/javascript"></script>
         <script src="js/angular.min.js" type="text/javascript"></script>
         <script src="js/angular-route.js" type="text/javascript"></script>
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
