updates to add extra margin around plugins. removed unused css.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="css/raleway-font.css">
+        <link href='http://fonts.googleapis.com/css?family=Merriweather:300italic,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
         <!-- Angular Libs -->
-        <script src="js/lodash.compat.min.js" type="text/javascript"></script>
         <script src="js/angular.min.js" type="text/javascript"></script>
         <script src="js/angular-route.js" type="text/javascript"></script>
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
