--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link href='http://fonts.googleapis.com/css?family=Merriweather:300italic,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/themes.css">
         <link id="theme-css" rel="stylesheet" type="text/css" href="">
 
         <!-- Angular Libs -->
