--- a/demo.html
+++ b/demo.html
@@ -49,17 +49,15 @@
         <script src="js/linuxDash.js" type="text/javascript"></script>
         <script src="js/widgets.js" type="text/javascript"></script>
         <script src="js/smoothie.min.js" type="text/javascript"></script>
+        <script async src="//www.google-analytics.com/analytics.js"></script>
         <script type="text/javascript">
-                var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-                document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-                try{
-                    var pageTracker = _gat._getTracker("UA-44168418-2");
-                    pageTracker._trackPageview();
-                } catch(err) {
-                    console.log(err);
-                }
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-44168418-2', 'auto');
+                ga('send', 'pageview');
         </script>
 
 
