--- a/demo.html
+++ b/demo.html
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Templates Get Rendered Here -->
-        <div ng-if="serverSet" id="plugins" class="animated slideInLeft" ng-view></div>
+        <div ng-if="serverSet" id="plugins" class="animated fadeInDown" ng-view></div>
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
