removed useless service

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     </head>
-    <body ng-controller="body">
+    <body>
         
         <div class="hero">
             <h4 class="title">Linux Dash</h4>
@@ -29,13 +29,12 @@
             <nav-bar></nav-bar>
         </div>
         
-        <div ng-if="!serverSet">
-            <h2>Setting server...</h2>
-            <loader></loader>
-        </div>
-
         <!-- Templates Get Rendered Here -->
-        <div ng-if="serverSet" id="plugins" class="animated fadeInDown" ng-view></div>
+        <div 
+            id="plugins"  
+            class="animated fadeInDown" 
+            ng-view>
+        </div>
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
