--- a/demo.html
+++ b/demo.html
@@ -8,11 +8,9 @@
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
       <link rel="icon" href="favicon.ico" type="image/x-icon">
       <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" type="text/css" href="css/main.css">
+      <link rel="stylesheet" type="text/css" href="main.css">
 
       <!-- Angular Libs -->
-      <script src="js/angular.min.js" type="text/javascript"></script>
-      <script src="js/angular-route.js" type="text/javascript"></script>
       <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -42,9 +40,7 @@
 
     <!-- Javascript-->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/linuxDash.js" type="text/javascript"></script>
-    <script src="js/modules.js" type="text/javascript"></script>
-    <script src="js/smoothie.min.js" type="text/javascript"></script>
+    <script src="linuxDash.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
