--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
 
-        <!-- Angular Libs -->
-        <script src="js/angular.min.js" type="text/javascript"></script>
-        <script src="js/angular-route.js" type="text/javascript"></script>
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -33,8 +30,6 @@
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/linuxDash.js" type="text/javascript"></script>
-        <script src="js/modules.js" type="text/javascript"></script>
-        <script src="js/smoothie.min.js" type="text/javascript"></script>
+        <script src="linuxDash.min.js" type="text/javascript"></script>
     </body>
 </html>
