minor ES6-related changes

--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,7 @@
         </div>
 
         <!-- Templates Get Rendered Here -->
-        <div
-            id="plugins"
-            ng-view>
-        </div>
+        <div id="plugins" ng-view></div>
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
