--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
     </head>
     <body>
 
-        <div class="hero">
-            <h4 class="title">Linux Dash</h4>
+        <div id="hero">
+            <h4 class="title">linux dash</h4>
             <small>A simple linux dashboard</small>
             <nav-bar></nav-bar>
         </div>
