--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="linuxDash">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>linux-dash : Server Monitoring Web Dashboard</title>
+        <title>Linux Dash : Simple, beautiful server monitoring web dashboard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,8 +16,7 @@
     <body>
 
         <div id="hero">
-            <h4 class="title">linux dash</h4>
-            <small>A simple linux dashboard</small>
+            <h4 class="title">Linux Dash</h4>
             <nav-bar></nav-bar>
         </div>
 
