added sidebar with rough server manager

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
     </head>
     <body>
 
+        <ld-sidebar></ld-sidebar>
+
         <div id="hero">
             <h4 class="title">Linux Dash</h4>
             <nav-bar></nav-bar>
