added resize-able plugin bottom bar; fixed multi-line smoothie chart dimensions;

--- a/src/js/core/features/line-chart/line-chart-plugin.html
+++ b/src/js/core/features/line-chart/line-chart-plugin.html
@@ -1,8 +1,8 @@
-<div class="plugin">
+<div class="plugin plugin-no-resize">
 
   <top-bar heading="heading" last-updated="lastGet" no-refresh-btn></top-bar>
 
-  <div class="plugin-body no-padding">
+  <div class="plugin-body plugin-body-short no-padding">
 
     <loader ng-if="!maxValue || initializing"></loader>
 
