--- a/src/js/core/features/multi-line-chart/multi-line-chart-plugin.html
+++ b/src/js/core/features/multi-line-chart/multi-line-chart-plugin.html
@@ -1,9 +1,9 @@
-<div class="plugin">
+<div class="plugin plugin-no-resize">
   <top-bar heading="heading" last-updated="lastGet" no-refresh-btn></top-bar>
 
-  <div class="plugin-body no-padding">
+  <div class="plugin-body plugin-body-short no-padding">
 
-    <canvas class="canvas" width="400" height="200"></canvas>
+    <canvas class="canvas" width="400" height="145"></canvas>
 
     <table class="metrics-table" border="0">
       <tbody>
