navbar added to save space; cleaner color-scheme; added html entity for 3-vertical bars.

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
         <link href='linuxDash.min.css' rel='stylesheet' type='text/css'>
+        <link href='https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css' rel='stylesheet' type='text/css'>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -16,10 +17,7 @@
     </head>
     <body>
 
-        <div id="hero">
-            <h4 class="title">Linux Dash</h4>
-            <nav-bar></nav-bar>
-        </div>
+        <nav-bar></nav-bar>
 
         <!-- Templates Get Rendered Here -->
         <div id="plugins" ng-view></div>
