--- a/src/js/core/features/multi-line-chart/multi-line-chart-plugin.html
+++ b/src/js/core/features/multi-line-chart/multi-line-chart-plugin.html
@@ -1,23 +1,20 @@
-<div class="plugin plugin-no-resize">
-  <top-bar heading="heading" last-updated="lastGet" no-refresh-btn></top-bar>
+<plugin chart-plugin>
 
-  <div class="plugin-body plugin-body-short no-padding">
+  <canvas class="canvas" width="400" height="145"></canvas>
 
-    <canvas class="canvas" width="400" height="145"></canvas>
+  <table class="metrics-table" border="0">
+    <tbody>
+      <tr ng-repeat="metric in metricsArray">
+        <td>
+          <div
+            class="metric-square"
+            style="display: inline-block; border: 1px solid {{metric.color}}; width: 8px; height: 8px; background: {{metric.color}}">
+          </div>
+        </td>
+        <td>{{ metric.name }}</td>
+        <td>{{ metric.data }}</td>
+      </tr>
+    </tbody>
+  </table>
 
-    <table class="metrics-table" border="0">
-      <tbody>
-        <tr ng-repeat="metric in metricsArray">
-          <td>
-            <div
-              class="metric-square"
-              style="display: inline-block; border: 1px solid {{metric.color}}; width: 8px; height: 8px; background: {{metric.color}}">
-            </div>
-          </td>
-          <td>{{ metric.name }}</td>
-          <td>{{ metric.data }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
 </plugin>
