no-data & last-update directives removed

--- a/src/js/core/features/line-chart/line-chart-plugin.html
+++ b/src/js/core/features/line-chart/line-chart-plugin.html
@@ -18,6 +18,6 @@
     </tbody>
   </table>
 
-  <no-data ng-show="emptyResult"></no-data>
+  <span ng-show="emptyResult">No data</span>
 
 </plugin>
