Added the custom Titles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="linuxDash">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>linux-dash : Server Monitoring Web Dashboard</title>
+        <title>QA Server Monitoring Dashboard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,8 +24,8 @@
     <body>
         
         <div class="hero">
-            <h4 class="title">Linux Dash</h4>
-            <small>A simple linux dashboard</small>
+            <h4 class="title">QA Server Monitoring</h4>
+            <small>Web Dashboard</small>
             <theme-switcher></theme-switcher>
             <nav-bar></nav-bar>
         </div>
