--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="linuxDash">
   <head>
-      <title>linux-dash : Server Monitoring Web Dashboard</title>
+      <title>QA Server Monitoring Dashboard</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
       <meta name="apple-mobile-web-app-capable" content="yes">
@@ -31,8 +31,8 @@
     </a>
 
       <div class="hero">
-        <h4 class="title">Linux Dash</h4>
-        <small>A simple linux dashboard</small>
+        <h4 class="title">QA Server Monitoring</h4>
+        <small>Web Dashboard</small>
         <theme-switcher></theme-switcher>
         <nav-bar></nav-bar>
       </div>
