--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-        <link href='linuxDash.min.css' rel='stylesheet' type='text/css'>
+        <link href='linuxDashDarkMode.css' rel='stylesheet' type='text/css'>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
