--- a/app/index.html
+++ b/app/index.html
@@ -2,26 +2,33 @@
 <html lang="en" ng-app="linuxDash">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Linux Dash : Simple, beautiful server monitoring web dashboard</title>
+        <title>Sysinfo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-        <link href='linuxDashDarkMode.css' rel='stylesheet' type='text/css'>
+        <link href='linuxDash.min.darkmode.cyan.css' rel='stylesheet' type='text/css' title="vanilla">
+        <link href='linuxDashDarkMode.css' rel='alternate stylesheet' type='text/css' title="darkmode">
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body onload="set_style_from_cookie()">
+        <nav-bar>
+            
+            </nav-bar>
 
-        <nav-bar></nav-bar>
 
         <!-- Templates Get Rendered Here -->
         <div id="plugins" ng-view></div>
 
         <!-- Javascript-->
         <script src="linuxDash.min.js" type="text/javascript"></script>
+        <script src="switchcss.js" type="text/javascript"></script>
+        <script src="toggle.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
     </body>
 </html>
